--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,12 @@
 }
 
 body.dark {
-  background-color: rgb(0, 37, 15);
+  background-color: rgb(0, 33, 45);
   color: rgb(241, 217, 184);
 }
 body {
-  background-color: rgb(203, 253, 235);
-  color: rgb(103, 79, 130);
+  background-color: rgb(227, 244, 250);
+  color: rgb(56, 1, 119);
 }
 
 img {
@@ -36,4 +36,10 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+a:hover {
+  color: rgb(173, 173, 255);
+  transform: scale(1.05);
+  font-weight: bold;
 }
