--- a/src/components/HomePage/styles/productCard.css
+++ b/src/components/HomePage/styles/productCard.css
@@ -6,8 +6,9 @@
     justify-content: space-between;
     align-items: center;
     height: 400px;
-    border: 2px solid;
+    /* border: 1px; */
     border-radius: 15px;
+    box-shadow: 0 0 5px, 0 0 5px, 0 0 5px, 0 0 5px;
 }
 
 .product-card-figure {
@@ -76,14 +77,15 @@
 }
 
 .product-card-button button {
-    background-color: aquamarine;
-    color: rgb(61, 50, 36);
+    background-color: rgb(173, 232, 255);
+    color: black;
     border: 2px solid;
     padding: 5px 10px;
     border-radius: 5px;
+    transition: .3s ease-in-out;
 }
 
 .product-card-button button:hover {
-    background-color: blanchedalmond;
-    color: darkgrey;
+    background-color: rgb(173, 173, 255);
+    color: rgb(0, 0, 0);
 }
