--- a/src/pages/styles/purchasesPage.css
+++ b/src/pages/styles/purchasesPage.css
@@ -7,13 +7,11 @@
     align-items: center;
     gap: 20px;
     margin-bottom: 30px;
-  
+    padding: 20px;
 }
 
 .purchases-container h1{
     display: flex;
     justify-content: flex-start;
-   
     padding-right: 200px;
-    
 }
