--- a/src/components/HomePage/styles/formPrice.css
+++ b/src/components/HomePage/styles/formPrice.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    font-size: 1.3rem;
+    
 }
 
 .forms-price-form {
@@ -16,26 +18,47 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    
 }
 
 .form-price-container-label label{
     display: flex;
     justify-content: center;
+    padding: 10px;
 }
 
 .form-price-container-label input{
     display: flex;
     text-align: center;
+    padding: 5px;
+    width: 100%;
+    font-size: 1.3rem;
 }
 
 .forms-price-form button{
     display: flex;
     margin: 5px;
+    height: 30px;
     justify-content: center;
     padding: 2px 10px;
     align-items: center;
     text-align: center;
-    border: 1px solid;
-    border-radius: 22px;
+    font-size: inherit;
+    border-radius: 12px;
+    width: 100%;
+    background-color: rgb(173, 232, 255);
+}
+
+.forms-price-form button:hover{
+   border: 1px solid;
+}
+
+@media  (max-width:480px) {
+    .forms-price-container{
+       
+        font-size: 0.9rem;
+    }
+    .form-price-container-label input{
+        
+        font-size: 0.9rem;
+    }
 }
