--- a/src/components/HomePage/styles/selectCategory.css
+++ b/src/components/HomePage/styles/selectCategory.css
@@ -3,6 +3,8 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
+    font-size: 1.3rem;
+    
 }
 
 .select-category-container p{
@@ -13,10 +15,20 @@
 .select-category-container-select{
     display: flex;
     padding: 2px;
+    background-color: rgb(173, 232, 255);
 }
 
 .select-category-container-select option{
     display: flex;
     text-align: center;
     padding: 2px;
+    font-size: 1.3rem;
+    
+}
+
+@media  (max-width:480px) {
+    .select-category-container {
+        
+        font-size: 0.9rem;
+    }
 }
