--- a/src/pages/styles/homePage.css
+++ b/src/pages/styles/homePage.css
@@ -1,23 +1,31 @@
+.container-homePage{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    padding: 50px;
+    gap: 20px;
+    font-size: 1.1rem;
+}
+
 .products-container{
     display: flex;
     flex-wrap: wrap;
     display: flex;
     justify-content: space-evenly;
     gap: 20px;
-    padding: 20px;
-    
 }
 
 .filters-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     flex-wrap: wrap;
     flex-direction: column;
+    gap: 20px;
 }
 
 .filters-container hr{
-    width: 50%;
+    width: 100%;
 }
 
 .filters-container-name {
@@ -34,5 +42,17 @@
 
 .filters-container-name input{
     text-align: center;
-    padding: 3px;
+    padding: 5px;
+    font-size: inherit;
+}
+
+@media  (max-width:480px) {
+    .container-homePage{
+        
+        font-size: 0.9rem;
+    }
+    .container-homePage{
+        /* display: flex; */
+        flex-wrap: wrap;
+    }
 }
