--- a/src/components/HomePage/styles/selectCategory.css
+++ b/src/components/HomePage/styles/selectCategory.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 1.3rem;
-    
+    width: 100%;
 }
 
 .select-category-container p{
@@ -16,19 +16,28 @@
     display: flex;
     padding: 2px;
     background-color: rgb(173, 232, 255);
+    font-size: 1.3rem;
 }
 
 .select-category-container-select option{
     display: flex;
     text-align: center;
-    padding: 2px;
+    height: 30px;
+    padding: 5px;
     font-size: 1.3rem;
-    
+    width: 100%;
 }
 
 @media  (max-width:480px) {
     .select-category-container {
         
+        font-size: 0.9rem;
+    }
+    .select-category-container-select{
+        
+        font-size: 0.9rem;
+    }
+    .select-category-container-select option{
         font-size: 0.9rem;
     }
 }
