--- a/src/components/HomePage/styles/formPrice.css
+++ b/src/components/HomePage/styles/formPrice.css
@@ -1,7 +1,7 @@
 .forms-price-container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 200px;
     font-size: 1.3rem;
     
 }
@@ -10,7 +10,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    
+    width: 200px;
     align-items: center;
 }
 
