--- a/src/components/HomePage/styles/selectCategory.css
+++ b/src/components/HomePage/styles/selectCategory.css
@@ -4,7 +4,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 1.3rem;
-    width: 100%;
+    width: 200px;
+    
 }
 
 .select-category-container p{
