--- a/src/pages/styles/homePage.css
+++ b/src/pages/styles/homePage.css
@@ -1,27 +1,33 @@
 .container-homePage{
     display: flex;
     /* flex-wrap: wrap; */
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 50px;
     gap: 20px;
     font-size: 1.1rem;
+    /* background: #4e54c8;  */
+    
 }
 
 .products-container{
     display: flex;
     flex-wrap: wrap;
     display: flex;
-    justify-content: space-evenly;
+    z-index: 5;
+    justify-content: space-between;
     gap: 20px;
+    
 }
 
 .filters-container {
+    
     display: flex;
-    align-items: center;
-    /* justify-content: space-evenly; */
-    flex-wrap: wrap;
-    flex-direction: column;
+    width: 100%;
     gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    z-index: 5;
 }
 
 .filters-container hr{
@@ -34,6 +40,7 @@
     flex-direction: column;
     align-items: center;
     padding: 5px;
+    width: 200px;
 }
 
 .filters-container-name p{
@@ -54,5 +61,105 @@
     .container-homePage{
         /* display: flex; */
         flex-wrap: wrap;
+    }
+}
+
+.circle li {
+    position: fixed;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(141, 57, 152, 0.4);
+    animation: animate 25s infinite;
+    bottom: -150px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+.circle li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circle li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circle li:nth-child(4){
+    left: 75%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circle li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circle li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circle li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 3s;
+}
+
+.circle li:nth-child(8){
+    left: 35%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circle li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circle li:nth-child(10){
+    left: 15%;
+    width: 150px;
+    height: 150px;
+    animation-duration: 0s;
+    animation-duration: 11s;
+}
+
+@keyframes animate {
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
     }
 }
